--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "material-icons": "^0.3.1"
+    "@types/uniqid": "^5.3.1",
+    "material-icons": "^0.3.1",
+    "uniqid": "^5.4.0"
   }
 }
